remplace views folder by layouts

--- a/layouts/index.erb
+++ b/layouts/index.erb
@@ -34,13 +34,24 @@
 	<div class="container">
 
 		<div class="row">
-			<div class="twelve columns">
-				<h2>Wikileaks GIFiles</h2>
-				<p>Follow the release updates</p>
-				<hr />
+      <div class="twelve columns">
         <div id="annual" class="graph"></div>
         <hr />
+      </div>
+    </div>
+    <div class="row">
+      <div class="eight columns">
+        <h2>Wikileaks GIFiles</h2>
+				<p>Follow the release updates</p>
+      </div>
+      <div class="four columns">
+        <h3>Latest releases</h3>
         <%= content %>
+        <hr>
+        <ul>
+          <li><a href="http://wikileaks.org/gifiles">Wikileaks - The Global Intelligence Files</a></li>
+          <li><a href="http://tetalab.org">Tetalab</a></li>
+        </ul>
       </div>
 		</div>
 	</div>
