--- a/layouts/pool.erb
+++ b/layouts/pool.erb
@@ -49,7 +49,7 @@
         <h3>Latest releases</h3>
         <% Pool.all(:order => :created_at.desc).each_with_index do |pool, index| %>
           <li><%= pool.created_at.strftime("%d-%m-%Y at %H:%M") %> - 
-          <a href='<%= pool.created_at.strftime("%d-%m-%Y_at_%H:%M") %>.html'><%= pool.documents.size %> mails</a></li>
+          <a href='<%= pool.created_at.strftime("%d-%m-%Y_at_%H:%M") %>.html'><%= pool.documents.size %> mail<%= "s" if pool.documents.size > 1 %></a></li>
         <% end %>
         <hr>
         <ul>
