begin to implement tooltip and correct sender/receivers mail association

--- a/layouts/index.erb
+++ b/layouts/index.erb
@@ -45,6 +45,7 @@
             <h4>What is this?</h4>
             <p>This website is following the stream of mails released on <a href="http://wikileaks.org/gifiles/">Wikileaks GIFiles</a></p>
             <p>The color of the nodes on each network graph indicates:<br>
+              <span class="friedman"></span> mails from George Friedman, CEO of Stratfor<br>
               <span class="stratfor"></span> mails from @stratfor.com<br>
               <span class="bullet"></span> mails from other domains
             </p>
